--- a/.github/workflows/Recovery-Builder-PBRP.yml
+++ b/.github/workflows/Recovery-Builder-PBRP.yml
@@ -15,23 +15,23 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree' # Your already made Device Tree for TWRP
         required: true
-        default: 'https://github.com/hunter2986767/custom_recovery_tree_infinix_X6710.git'
+        default: 'https://github.com/hunter2986767/Device-tree-For-Infinix-zero-ultra-X6820-/actions/runs/14279729821'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch' # Your Device Tree Branch, make sure it's right.
         required: true
-        default: 'twrp-12.1'
+        default: 'main'
       DEVICE_PATH:
         description: 'Specify your Device Path' # As is, just like your DEVICE_PATH in your BoardConfig.mk
         required: true
-        default: 'device/infinix/x6710'
+        default: 'device/infinix/X6820'
       DEVICE_NAME:
         description: 'Specify your Device Codename' # As is, just like your PRODUCT_DEVICE in your device tree.
         required: true
-        default: 'x6710'
+        default: 'X6820'
       BUILD_TARGET:
         description: 'Specify your Build Target' # Pick among boot, recovery and vendor_boot
         required: true
-        default: 'recovery'
+        default: 'boot'
         type: choice
         options:
         - boot
