--- a/.github/workflows/Recovery-Builder-PBRP.yml
+++ b/.github/workflows/Recovery-Builder-PBRP.yml
@@ -15,7 +15,7 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree' # Your already made Device Tree for TWRP
         required: true
-        default: 'https://github.com/hunter2986767/Device-tree-For-Infinix-zero-ultra-X6820-/actions/runs/14279729821'
+        default: 'https://github.com/hunter2986767/Device-tree-For-Infinix-zero-ultra-X6820-.git'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch' # Your Device Tree Branch, make sure it's right.
         required: true
