--- a/.github/workflows/Recovery-Builder-TWRP.yml
+++ b/.github/workflows/Recovery-Builder-TWRP.yml
@@ -15,23 +15,23 @@ on:
       DEVICE_TREE:
         description: 'Custom Recovery Tree' # Your already made Device Tree for TWRP
         required: true
-        default: 'https://github.com/hunter2986767/Realme-11-4g-RMX-3636-device-tree'
+        default: 'https://github.com/hunter2986767/Device-tree-For-Infinix-zero-ultra-X6820-.git'
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch' # Your Device Tree Branch, make sure it's right.
         required: true
-        default: 'twrp-12.1'
+        default: 'main'
       DEVICE_PATH:
         description: 'Specify your Device Path' # As is, just like your DEVICE_PATH in your BoardConfig.mk
         required: true
-        default: 'device/realme11/rmx3636'
+        default: 'device/infinix/X6820'
       DEVICE_NAME:
         description: 'Specify your Device Codename' # As is, just like your PRODUCT_DEVICE in your device tree.
         required: true
-        default: 'rmx3636'
+        default: 'X6820'
       BUILD_TARGET:
         description: 'Specify your Build Target' # Pick among boot, recovery and vendor_boot
         required: true
-        default: 'vendorboot'
+        default: 'boot'
         type: choice
         options:
         - boot
